<resources>
    <string name="app_name">StepMapper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="toggle_Hourly">Hourly</string>
    <string name="toggle_Weekly">Weekly</string>
    <string name="menu_map">Map</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="goal">Goal : 0</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string name="start">Start</string>
    <string name="toggle_stop">stop</string>
    <string name="toggle_start">start</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="latitude">0.0</string>
    <string name="longitude">0.0</string>
    <string name="timestamp_text">"Start:\t" + "yyyy-MM-dd HH:mm:ss" + "\nEnd:\t\t" + "yyyy-MM-dd HH:mm:ss"</string>
    <string name="title_activity_maps">Track Map</string>
    <string name="step_permission_denied">permission denied</string>
    <string name="acc_not_available">ACC not available</string>
    <string name="step_not_available">step detector not available</string>
    <string name="progressCount" />
    <string name="signin">Sign In</string>
    <string name="createAccount">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="Congrats">Congratulations! You have achieved your daily goal.</string>
    <string name="password">Password</string>
    <string name="backToLogin">"Back to "</string>
    <string name="logout">Log Out</string>
    <color name="white">#FFFFFF</color>
</resources>