<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_footprints"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_bar_chart_24px"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_scoreboard"
            android:title="@string/menu_scoreboard" />
    </group>
</menu>