<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stepmapper.ui.home.HomeFragment"
        android:label="@string/menu_steps"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.stepmapper.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.stepmapper.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
    
    <fragment
        android:id="@+id/nav_score"
        android:name="com.example.stepmapper.ui.scoreboard.ScoreboardFragment"
        android:label="@string/menu_scoreboard"
        tools:layout="@layout/fragment_scoreboard" />
</navigation>