<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:background="@color/colorAccent"
    tools:context=".ui.user.LoginFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="Email"
                android:textColorHint="#3c3c3c"
                android:paddingVertical="15dp"
                android:textColor="#000000"
                android:inputType="textEmailAddress"
                android:paddingStart="60dp"
                android:background="@drawable/rectagular_field"
                tools:ignore="RtlSymmetry">
            </EditText>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_email"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true">
            </ImageView>

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/password"
            android:textColorHint="#3c3c3c"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:background="@drawable/rectagular_field">
        </EditText>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_padlock"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true">
        </ImageView>
    </RelativeLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/signin"
        android:background="@drawable/roundcorner"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textAllCaps="true">
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textColor="#ffffff"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/signUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="22sp">
        </TextView>

    </LinearLayout>
    <Button
        android:id="@+id/loginGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Login with Google"
        android:background="@drawable/roundcorner"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textAllCaps="true"/>

</LinearLayout>