<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:background="@color/white"
    tools:context=".ui.user.SignUpFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="Email"
                android:textColorHint="#3c3c3c"
                android:paddingVertical="15dp"
                android:textColor="#000000"
                android:inputType="textEmailAddress"
                android:paddingStart="60dp"
                android:background="@drawable/rectagular_field">
            </EditText>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_email"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true">
            </ImageView>

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Password"
            android:textColorHint="#3c3c3c"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:background="@drawable/rectagular_field">
        </EditText>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_padlock"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true">
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/passwordLogin2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Confirm password"
            android:textColorHint="#3c3c3c"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:background="@drawable/rectagular_field">
        </EditText>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_padlock"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true">
        </ImageView>
    </RelativeLayout>
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:textAllCaps="true">
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToLogin"
            android:textColor="#ffffff"
            android:textSize="18dp">
        </TextView>
        <TextView
            android:id="@+id/signInTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="22dp">
        </TextView>

    </LinearLayout>

</LinearLayout>